--- a/TeamTestEscLite/Packages/manifest.json
+++ b/TeamTestEscLite/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.leopotam.ecslite": "https://github.com/Leopotam/ecslite.git",
+    "com.neuecc.unirx": "https://github.com/neuecc/UniRx.git?path=/Assets/Plugins/UniRx/Scripts",
     "com.unity.ide.rider": "2.0.7",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.ugui": "1.0.0",
